<resources>
    <string name="app_name">CSIS3275GroupProject</string>
    <string name="performance">Performance</string>
    <string name="pay">Pay</string>
    <string name="personal_info">Personal Info</string>
    <string name="sign_out">Sign out</string>
    <string name="notification">Notification</string>
    <string name="full_name">Full Name</string>
    <string name="AddEmployee">Add Employee</string>
    <string name="profile">profile</string>
    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>
    <string name="punch_it">Punch It!</string>
    <string name="PunchIt">Punch It!</string>
    <string name="loginMessage">Welcome to Punch It App! Login by using your account. Your account will be created by your manager.</string>
    <string name="Login">LOGIN</string>
    <string name="Password">Password</string>
    <string name="Username">Username</string>
    <string name="BaseSalary">Base Salary</string>
    <string name="newEmployeeInformation">New Employee Information</string>
    <string name="legalName">Legal Name</string>
    <string name="dob">Date Of Birth</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="phoneNum">Phone</string>
    <string name="jobTitle">Job Title</string>
    <string name="hireDate">Hire Date</string>
    <string name="psw">Password</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="createEmployee">Create Employee</string>
    <string name="headerLogin">Welcome to Punch It App! Login by using your account. Your account will be created by your manager.</string>
    <string name="button">Button</string>
    <string name="resetPasswordBtn">RESET PASSWORD</string>
    <string name="emailReset">EMAIL</string>
    <string name="resetPasswordHeader">Please provide your registered email in order to receive a verification email.</string>
    <string name="btnOpenReg">Open Reg</string>
    <string name="quickAccess">Quick Access</string>
    <string name="Schedule">Schedule</string>
    <string name="performanceTitle">Performance Detail</string>
    <string name="performFrom">From</string>
    <string name="performName">Full Name</string>
    <string name="performTo">To</string>
    <string name="performRating">Rating</string>
    <string name="performRemark">Remark</string>
    <string name="performaFrom">From</string>
    <string name="performTotalPay">Total Pay</string>
    <string name="iconDescription">icon description</string>
    <string name="performace_amp_pay"><![CDATA[Performace & Pay]]></string>
    <string name="time_punch">Time Punch</string>
    <string name="you_can_punch_in_or_out_by_using_mobile_phone">You can punch in or out by using mobile phone</string>
    <string name="current_date_amp_time"><![CDATA[Current Date & Time:]]></string>
    <string name="textview">TextView</string>
    <string name="punch">PUNCH</string>
    <string name="performance_amp_pay"><![CDATA[Performance & Pay]]></string>
    <string name="punch_in_out">Punch In/Out</string>
    <string name="hintDate">Choose a date</string>
    <string name="btnCalculate">Calculate</string>

    <string name="full_name_edit">FULL NAME</string>
    <string name="date_of_birth">DATE OF BIRTH</string>
    <string name="address_edit">ADDRESS</string>
    <string name="phone_no">PHONE</string>
    <string name="job_tittle_edit">JOB TITLE</string>
    <string name="hired_date">HIRE DATE</string>
    <string name="base_salary">BASE SALARY</string>
    <string name="UpdateEmployee">UPDATE EMPLOYEE</string>
    <string name="delete_employee">DELETE EMPLOYEE</string>
    <string name="personal_information">PERSONAL INFORMATION</string>
    <string name="EditProfileBtn">Edit profile button</string>
    <string name="employee">EMPLOYEE</string>
    <string name="home">Home</string>
    <string name="manage_user">Manage Employee</string>


</resources>