<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5873b8"
    tools:context=".RegisterUser">

    <EditText
        android:id="@+id/txtLegalName"
        android:layout_width="308dp"
        android:layout_height="49dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/legalName"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#0E0E0E"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNewEmployee"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/txtAddress"
        android:layout_width="308dp"
        android:layout_height="49dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/address"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#0E0E0E"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/txtPasswordReg"
        android:layout_width="308dp"
        android:layout_height="49dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/psw"
        android:importantForAutofill="no"
        android:inputType="text|textPassword"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#0E0E0E"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddress"
        app:passwordToggleEnabled="true"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/btnCreateEmployee"
        android:layout_width="308dp"
        android:layout_height="50dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:background="#445a94"
        android:text="@string/createEmployee"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHireDate" />

    <EditText
        android:id="@+id/txtPhone"
        android:layout_width="308dp"
        android:layout_height="49dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/phoneNum"
        android:importantForAutofill="no"
        android:inputType="text|phone"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#0E0E0E"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPasswordReg"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/txtJobTitle"
        android:layout_width="308dp"
        android:layout_height="49dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/jobTitle"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#0E0E0E"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPhone"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/txtHireDate"
        android:layout_width="308dp"
        android:layout_height="49dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/hireDate"
        android:importantForAutofill="no"
        android:inputType="date"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#0E0E0E"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBaseSalary"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/txtBaseSalary"
        android:layout_width="308dp"
        android:layout_height="49dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/BaseSalary"
        android:importantForAutofill="no"
        android:inputType="datetime|numberDecimal"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#0E0E0E"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtJobTitle"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="308dp"
        android:layout_height="49dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#0E0E0E"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDob"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/txtDob"
        android:layout_width="308dp"
        android:layout_height="49dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/dob"
        android:importantForAutofill="no"
        android:inputType="date"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#0E0E0E"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLegalName"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/txtNewEmployee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/newEmployeeInformation"
        android:textColor="#EEEEEE"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="45dp"
        android:layout_height="39dp"
        android:layout_marginStart="173dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="173dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCreateEmployee" />
</androidx.constraintlayout.widget.ConstraintLayout>