<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_reset_password"
    tools:context=".Login">

    <TextView
        android:id="@+id/txtHeaderReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="133dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="133dp"
        android:fontFamily="@font/petrona"
        android:text="@string/PunchIt"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/headerResetPassword"
        android:layout_width="290dp"
        android:layout_height="51dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="68dp"
        android:fontFamily="@font/petrona"
        android:text="@string/resetPasswordHeader"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHeaderReset" />

    <EditText
        android:id="@+id/txtEmailReset"
        android:layout_width="272dp"
        android:layout_height="48dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textShortMessage|textPersonName|textEmailAddress"
        android:labelFor="@id/txtEmailResetPassword"
        android:padding="10dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmailResetPassword"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/btnResetPassword"
        android:layout_width="272dp"
        android:layout_height="50dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="20dp"
        android:background="#2D4278"
        android:text="@string/resetPasswordBtn"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmailReset" />

    <TextView
        android:id="@+id/txtEmailResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/petrona"
        android:labelFor="@id/txtEmailReset"
        android:text="@string/emailReset"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerResetPassword"
        tools:ignore="SpeakableTextPresentCheck" />

    <ProgressBar
        android:id="@+id/progressBarResetPassword"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="178dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="180dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnResetPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>