<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context=".Login">

    <TextView
        android:id="@+id/txtHeaderReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="133dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="133dp"
        android:fontFamily="@font/petrona"
        android:text="@string/PunchIt"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/headerResetPassword"
        android:layout_width="272dp"
        android:layout_height="71dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="68dp"
        android:fontFamily="@font/petrona"
        android:text="@string/headerLogin"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHeaderReset" />

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="141dp"
        android:layout_height="37dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="68dp"
        android:fontFamily="@font/petrona"
        android:gravity="center"
        android:text="@string/forgotPassword"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnResetPassword" />

    <EditText
        android:id="@+id/txtEmailReset"
        android:layout_width="272dp"
        android:layout_height="48dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="172dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:labelFor="@id/txtEmailResetPassword"
        android:padding="10dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHeaderReset"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/txtLogin2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="24dp"
        android:labelFor="@id/txtPasswordReg"
        android:text="@string/Password"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmailReset" />

    <EditText
        android:id="@+id/txtPasswordReg"
        android:layout_width="272dp"
        android:layout_height="48dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName|textPassword"
        android:padding="10dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmailReset"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/btnResetPassword"
        android:layout_width="272dp"
        android:layout_height="50dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="28dp"
        android:background="#2D4278"
        android:text="@string/Login"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPasswordReg" />

    <TextView
        android:id="@+id/txtEmailResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="252dp"
        android:fontFamily="@font/petrona"
        android:labelFor="@id/txtEmailReset"
        android:text="@string/Login"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <ProgressBar
        android:id="@+id/progressBarResetPassword"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="178dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="180dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtForgotPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>